; ModuleID = '/home/carl/AnghaBench/TDengine/src/system/detail/src/extr_vnodeFilterFunc.c_vnodeGetRangeFilterFuncArray.c'
source_filename = "/home/carl/AnghaBench/TDengine/src/system/detail/src/extr_vnodeFilterFunc.c_vnodeGetRangeFilterFuncArray.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@rangeFilterFunc_i8 = common dso_local global i32* null, align 8
@rangeFilterFunc_i16 = common dso_local global i32* null, align 8
@rangeFilterFunc_i32 = common dso_local global i32* null, align 8
@rangeFilterFunc_i64 = common dso_local global i32* null, align 8
@rangeFilterFunc_ds = common dso_local global i32* null, align 8
@rangeFilterFunc_dd = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @vnodeGetRangeFilterFuncArray(i32 %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %19 [
    i32 134, label %5
    i32 128, label %7
    i32 130, label %9
    i32 131, label %11
    i32 129, label %13
    i32 135, label %13
    i32 132, label %15
    i32 133, label %17
  ]

5:                                                ; preds = %1
  %6 = load i32*, i32** @rangeFilterFunc_i8, align 8
  store i32* %6, i32** %2, align 8
  br label %20

7:                                                ; preds = %1
  %8 = load i32*, i32** @rangeFilterFunc_i8, align 8
  store i32* %8, i32** %2, align 8
  br label %20

9:                                                ; preds = %1
  %10 = load i32*, i32** @rangeFilterFunc_i16, align 8
  store i32* %10, i32** %2, align 8
  br label %20

11:                                               ; preds = %1
  %12 = load i32*, i32** @rangeFilterFunc_i32, align 8
  store i32* %12, i32** %2, align 8
  br label %20

13:                                               ; preds = %1, %1
  %14 = load i32*, i32** @rangeFilterFunc_i64, align 8
  store i32* %14, i32** %2, align 8
  br label %20

15:                                               ; preds = %1
  %16 = load i32*, i32** @rangeFilterFunc_ds, align 8
  store i32* %16, i32** %2, align 8
  br label %20

17:                                               ; preds = %1
  %18 = load i32*, i32** @rangeFilterFunc_dd, align 8
  store i32* %18, i32** %2, align 8
  br label %20

19:                                               ; preds = %1
  store i32* null, i32** %2, align 8
  br label %20

20:                                               ; preds = %19, %17, %15, %13, %11, %9, %7, %5
  %21 = load i32*, i32** %2, align 8
  ret i32* %21
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
